[package]
edition = "2018"
name = "swap-session"
version = "0.1.0"

[[bin]]
bench = false
doctest = false
name = "swap-session"
path = "src/main.rs"
test = false

[dependencies]
casper-contract = { version = "4.0.0", features = ["test-support"] }
casper-types = "4.0.1"
common = { path = "../common" }
hex = { version = "0.4.3", default-features = false }
types = { path = "../types" }
contract-utilities = { path = "../contract-utilities" }
[profile.release]
codegen-units = 1
lto = true
