[package]
name = "router"
version = "0.2.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

[dependencies]
hex = { version = "0.4.3", default-features = false }
casper-contract = "4.0.0"
casper-types = "4.0.1"
contract-utils = { path = "../utils/contract-utils" }
common = { path = "../../common" }
casper-event-standard = { git = "https://github.com/akirapham/casper-event-standard.git", default-features = false }
contract-utilities = { path = "../../contract-utilities" }
types = { path = "../../types" }
math = { path = "../../math" }
casper_types_derive = "0.1.0"

[[bin]]
name = "router"
path = "bin/cep47_token.rs"
bench = false
doctest = false
test = false
