[package]
name = "test-env"
version = "0.2.0"
edition = "2018"

[dependencies]
casper-engine-test-support = { version = "7.0.1", features = ["test-support"] }
casper-execution-engine = { version = "7.0.1" }
once_cell = "1.8.0"
serde = { version = "1", features = [
    "derive",
    "alloc",
], default-features = false }
casper_types_derive = "0.1.0"
rand = "0.7.0"
hex = { version = "0.4.3", default-features = false }
casper-types = "4.0.1"
