[package]
name = "test-env"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = { version = "4.0.0", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "7.0.1", features = ["test-support"] }
casper-execution-engine = "7.0.1"
casper-types = "4.0.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
